tests/neg/semantic_strlen_bad_arity.baa
// EXPECT: عدد معاملات 'طول_نص' غير صحيح

صحيح الرئيسية() {
    صحيح س = طول_نص("أ"، "ب").
    إرجع س.
}

